ForwardAuth/yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #  namespace: forward-auth
  name: forward-auth
  labels:
    app: forward-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forward-auth
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      containers:
        - name: forward-auth
          image: blu3berrywhy/avalon-forwardauth:v1.0.2
          ports:
            - containerPort: 5000
