ForwardAuth/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  #  namespace: forward-auth
  name: forward-auth
spec:
  selector:
    app: forward-auth
  #  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
